# claudeterm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LAUNCH.md  PRODUCT_HUNT.md  README.md  docker-entrypoint.sh  fly.toml  litestream.yml
.github/: dependabot.yml
.github/workflows/: auto-implement.yml  bug-monitor.yml  deploy.yml
nou/: Info.plist  NOU.swift  build.sh
src/: billing.rs  drip.rs  email_templates.rs  gemini.rs  imagen.rs  main.rs  nou.rs  router.rs  storage.rs  templates.rs  veo.rs
static/: index.html  manifest.json  song.md
tasks/: todo.md
worker/: Dockerfile
